...

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/profileLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
...

            <androidx.cardview.widget.CardView
                android:id="@+id/profile_image_CardView"
                android:layout_width="100dp"
                android:layout_height="100dp"
...

                <ImageView
                    android:id="@+id/profile_image_ImageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/username"
                android:layout_width="131dp"
                android:layout_height="82dp"
...

            <ImageView
                android:id="@+id/editUser"
                android:layout_width="30dp"
                android:layout_height="20dp"
...

            <ImageView
                android:id="@+id/showQRCode"
                android:layout_width="30dp"
                android:layout_height="27dp"
...

                    <TextView
                        android:id="@+id/profile_total_games_stat"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
...

            <Button
                android:id="@+id/profile_localSongs"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
...

            <Button
                android:id="@+id/profile_scores"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
...

            <Button
                android:id="@+id/profile_following"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
...
            android:orientation="horizontal"
            android:visibility="visible"
            app:layout_constraintBottom_toTopOf="@id/logout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
...

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/profile_followingList"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
...

            <androidx.core.widget.NestedScrollView
                android:id="@+id/profile_scroll_stat"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
...

                        <TextView
                            android:id="@+id/profile_top_tracks"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
...

                        <TextView
                            android:id="@+id/profile_kpop"
                            android:layout_width="147dp"
                            android:layout_height="wrap_content"
...

                        <TextView
                            android:id="@+id/profile_rock"
                            android:layout_width="147dp"
                            android:layout_height="wrap_content"
...

                        <TextView
                            android:id="@+id/profile_bts"
                            android:layout_width="147dp"
                            android:layout_height="wrap_content"
...

                        <TextView
                            android:id="@+id/profile_imagine_dragons"
                            android:layout_width="147dp"
                            android:layout_height="wrap_content"
...

                        <TextView
                            android:id="@+id/profile_billie_eilish"
                            android:layout_width="147dp"
                            android:layout_height="wrap_content"
...
