<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/profile_following_profile_image"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@drawable/logo">
    </ImageView>

    <TextView
        android:id="@+id/profile_following_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/profile_following_profile_image"
        android:layout_centerInParent="true"
        android:layout_marginStart="12dp"
        android:text="@string/profile_username"
        android:textSize="19sp" />

    <ImageView
        android:id="@+id/profile_unfollowIcon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="49dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="25dp"
        android:src="@drawable/green_tick">
    </ImageView>

    <Button
        android:id="@+id/profile_followingBtn"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="49dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="25dp"
        android:backgroundTint="@color/cg_blue"
        android:text="+"
        android:visibility="invisible" />

</RelativeLayout>